--- a/css/styles.css
+++ b/css/styles.css
@@ -118,10 +118,10 @@ footer {
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding-inline: 1rem;
-  margin-right: 3rem;
+  margin-right: 10rem;
 
 }
 
@@ -142,7 +142,8 @@ footer {
  height: 30rem;
  display: inline-block;
  flex-direction: column;
- margin-bottom: 10rem;
+ margin-bottom: 8rem;
+ margin-left: 4.5rem;
 
 }
 
@@ -151,7 +152,7 @@ footer {
   height: 30rem;
   display: inline-block;
   flex-direction: column;
-  margin-bottom: 10rem;
+  margin-bottom: 8rem;
 }
 
 .hat {
@@ -159,16 +160,47 @@ footer {
   height:20rem;
   display: inline-block;
   flex-direction: column;
-  margin-bottom: 10rem;
+  margin-bottom: 8rem;
+}
+
+.price-1 {
+  text-align: center;
+  font-family: uppercut-angle, sans-serif;
+  font-size: 30px;
+  margin-top: -7rem;
+
+}
+
+.price-2{
+    font-size: 30px;
+    font-family: uppercut-angle, sans-serif;
+    text-align: center; 
+    height: 6rem;
+    margin-left: 4.5rem;
+    display: flexbox;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center; 
+    word-spacing: 25rem;
+  
 }
 
 /*About Page*/
+
+.bible {
+  height: 25rem;
+  width: 50rem;
+  border: solid 5px #b2a4d4;
+  display: inline-flex;
+  margin-left: 21rem;
+  margin-top: 2rem;
+}
 
 .partner {
   text-align: center;
   font-family: uppercut-angle, sans-serif;
   font-size: 25px;
-  margin-top:6rem;
+  margin-top:4rem;
 
 }
 
@@ -177,8 +209,8 @@ footer {
   width: 15rem;
   display: block;
   flex-direction: column;
-  margin-bottom: 10rem;
-  margin-left: 37.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 38.5rem;
 }
 
 .info {
@@ -186,12 +218,78 @@ footer {
   text-align: center;
   margin-left: 15rem;
   margin-right: 15rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 .proceeds {
   display: inline-block;
   margin-left: 5rem;
-  margin-bottom: 50rem;
+  margin-bottom: 10rem;
   font-size: 25px;
   
+}
+
+/* Events */
+
+.day-container {
+  display: flex;
+  justify-content: space-between; 
+  gap: 20px; 
+  margin-bottom: 10rem;
+}
+
+.flex-item {
+  flex: 1; 
+  padding: 20px;
+  background-color: #565656;
+  border: solid 7px #ffffff;
+  text-align: center;
+  margin-bottom: 10rem;
+}
+
+.brandon {
+  width:17rem;
+  height:17rem;
+  border: solid 5px #b2a4d4;
+
+}
+
+.elevation {
+  width:33rem;
+  height:13rem;
+  border: solid 5px #b2a4d4;
+
+}
+
+.tim {
+  width:17rem;
+  height:20rem;
+  border: solid 5px #b2a4d4;
+
+}
+
+.phil {
+  width:25rem;
+  height:17rem;
+  border: solid 5px #b2a4d4;
+
+}
+
+.dayo {
+  font-family: uppercut-angle, sans-serif;
+  font-size: 50px;
+  text-align: center;
+  color: #ccba78;
+
+}
+
+.day {
+  font-size: 35px;
+  text-align: center;
+  color: #b2a4d4;
+
+}
+
+.spacing{
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
