--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ footer {
   font-family: uppercut-angle, sans-serif;
   font-size: 30px;
   margin-top: -7rem;
+  text-shadow: 2px 2px 5px #ccba78;
 
 }
 
@@ -182,6 +183,7 @@ footer {
     justify-content: center; 
     align-items: center; 
     word-spacing: 25rem;
+    text-shadow: 2px 2px 5px #ccba78;
     
   
 }
